# python-intro-to-kafka

./: README.md  consumer.py  producer.py  pyproject.toml  requirements.txt  requirements_dev.txt
